minor changes to compile cleanly

--- a/memo.tex
+++ b/memo.tex
@@ -71,7 +71,7 @@
   \end{originalfigure}
 }
 %% Comment
-\newcommand{\comment}[1]{\textcolor{red}{[#1]}}
+%\newcommand{\comment}[1]{\textcolor{red}{[#1]}}
 
 %% Yuji's macros
 %%list SeibergDual
@@ -382,7 +382,7 @@ the would-be-$E_3$-page is given by
 \subsection{Adams SS}
 According to our naive guess, the module $\widetilde H^\ast(B\left(\tfrac{SO(4)\times SU(2)}{\bZ_2}\right);\bZ_2)_{\leq 5}$ consists of
 \begin{equation}
-	\begin{tikzpicture}[thick,baseline=(m-2-1.south)]
+	\begin{tikzpicture}[thick,baseline=(m-2-4.south)]
 		\matrix (m) [
 			matrix of math nodes,
 			row sep= 1em,
