spin bordism of K(Z4,2)

--- a/memo.tex
+++ b/memo.tex
@@ -573,6 +573,40 @@ and thus the $B\beta E$ anomaly cannot be canceled by fermions.
 
 \newpage
 
+\section{misc}
+
+\subsection{$\bZ_4$ 1-form symmetry}
+According to \cite[Appendix C.3]{Clement2002} and \cite[Eq.\,(6.3)]{Wan:2018bns}, it seems that we have
+\begin{equation}
+	\begin{array}{ccc}
+		E^2_{p,q}=H_p\big(K(\bZ_4,2);\Omega_q^{\text{spin}}\big) && \widetilde\Omega_{p+q}^{\text{spin}}(K(\bZ_4,2))\vspace{4mm}\\
+		\begin{array}{c|c:cccccccccccc}
+			6  &&&&&& \\
+			5  & \cellcolor{lightyellow} & \hphantom{\bZ_2} & \hphantom{\bZ_2} & \hphantom{\bZ_2} & \hphantom{\bZ_2} & \hphantom{\bZ_2} \\
+			4  & \bZ & \cellcolor{lightyellow} & \ast && \ast & \ast & \ast\\
+			3  &  && \cellcolor{lightyellow} &&&\\
+			2  & \bZ_2 &  & \red{\fbox{\black{$\bZ_2$}}} & \Blue{\fbox{\black{$\bZ_2$}}}\cellcolor{lightyellow} & \ast & \ast & \ast\\
+			1  & \bZ_2 && \red{\dbox{\black{$\bZ_2$}}} & \Blue{\dbox{\black{$\bZ_2$}}} & \red{\fbox{\black{$\bZ_2$}}}\cellcolor{lightyellow} & \Blue{\fbox{\black{$\bZ_2$}}} & \ast\\
+			0 & \bZ &  & \bZ_4 &  & \red{\dbox{\black{$\bZ_8$}}} & \Blue{\dbox{\black{$\bZ_2$}}} \cellcolor{lightyellow} & \ast\\
+			\hline
+			& 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
+		\end{array}
+		& \longrightarrow & 
+		\begin{array}{c|c}
+			6  & \ast\\
+			5  & \cellcolor{lightyellow}\\
+			4  & \bZ_4\\
+			3  & \\
+			2  & \bZ_4\\
+			1  & \\
+			0 & \\
+			\hline\\
+		\end{array}
+	\end{array}
+\end{equation}
+
+\newpage
+
 
 \bibliographystyle{ytphys}
 \baselineskip=.95\baselineskip
