--- a/ref.bib
+++ b/ref.bib
@@ -163,3 +163,27 @@
 
 
 
+@phdthesis{Clement2002,
+  author       = {Alain Clement}, 
+  title        = {Integral cohomology of finite Postnikov towers},
+  school       = {University of Lausanne,
+Switzerland},
+  year         = 2002,
+  url         = {http://doc.rero.ch/record/482/files/Clement_these.pdf}
+}
+
+
+
+@article{Wan:2018bns,
+    author = "Wan, Zheyan and Wang, Juven",
+    title = "{Higher anomalies, higher symmetries, and cobordisms I: classification of higher-symmetry-protected topological states and their boundary fermionic/bosonic anomalies via a generalized cobordism theory}",
+    eprint = "1812.11967",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.4310/AMSA.2019.v4.n2.a2",
+    journal = "Ann. Math. Sci. Appl.",
+    volume = "4",
+    number = "2",
+    pages = "107--311",
+    year = "2019"
+}
