't Hooft-Polyakov monopole argument

--- a/memo.tex
+++ b/memo.tex
@@ -573,6 +573,67 @@ and thus the $B\beta E$ anomaly cannot be canceled by fermions.
 
 \newpage
 
+\section{'t Hooft-Polyakov monopole argument}
+For an $SU(2)$ gauge theory Higgssed by an adjoint ($\bm{3}$, spin-$1$, isovector) scalar,
+the gauge group is broken down to $U(1)$, and correspondingly it accommodates topological solitons (monopoles):
+\begin{equation*}
+	\pi_2\left(
+		\dfrac{SU(2)}{U(1)}
+	\right) = \bZ.
+\end{equation*}
+In the presence of (additional) fermions, this monopole might acquire non-trivial charge under
+spacetime-Lorentz or flavor symmetries, depending on the representation of the fermions under $SU(2)$ gauge symmetry:
+\begin{equation*}
+	\begin{tabular}{c||cccc}
+		fermion gauge rep. & number of zero-modes & spin of zero-modes& spin of monopole & flavor rep.\\
+		\hline
+		$\bm{2}$ & $1$ & $0$ & $0$ & spinor\\
+		$\bm{3}$ & $2$ & $\tfrac{1}{2}$ & \\
+		$\bm{4}$ & $4$ & $0\oplus 1$ & $\tfrac{1}{2}$\\
+	\end{tabular}
+\end{equation*}
+The numbers of zero-modes can be computed from the Callias index theorem\cite{Callias:1977kg}.
+
+According to \cite{Wang:2018qoy},
+there is a $w_2(TM_4)\beta w_2(SU(2)_{\text{gauge}})$ anomaly for a fermion in $\bm{4}$ charged under
+\begin{equation*}
+	\dfrac{Spin(4)_{\text{spacetime}} \times SU(2)_{\text{gauge}}}{\bZ_2},
+\end{equation*}
+which incarnates in the IR as an ill-definition of the effective interaction $w_2(TM) c_1(U(1)_{\text{gauge}})$,
+emerging after integrating out the fermion which obtained mass through Yukawa coupling.
+This effective interaction term should arise in order to make the monopole a fermion,
+but is not well-defined without a trivialization of $w_2(TM_4)$ or equivalently a spin structure.
+
+This situation looks quite similar to our problem where the fermions are charged under
+\begin{equation*}
+	\dfrac{SO(4)_{\text{gauge}} \times SU(2)_{\text{flavor}}}{\bZ_2}.
+\end{equation*}
+Therefore, by breaking $SU(2)_{\text{flavor}}$ to $U(1)_{\text{flavor}}$
+and examining the charge of the corresponding monopole under the remaining gauge group,
+one might be able to find out that there is a similar problem,
+which implies the existence of $w_2\beta w_2$ anomaly in the first place as desired.
+
+Also, one should be able to generalize this whole argument to the case of fermions charged under
+\begin{equation*}
+	\dfrac{SO(2n_c)_{\text{gauge}} \times SU(2n_f)_{\text{flavor}}}{\bZ_2}
+\end{equation*}
+by breaking $SU(2n_f)_{\text{flavor}}$ to $SO(2n_f)_{\text{flavor}}$,
+since there are monopoles characterized by
+\begin{equation*}
+	\pi_2\left(
+		\dfrac{SU(2n_f)}{SO(2n_f)}
+	\right)
+	=
+	\left\{
+		\begin{array}{cl}
+			\bZ_2 & (n_f \geq 2)\\
+			\bZ & (n_f = 1)
+		\end{array}
+	\right..
+\end{equation*}
+
+\newpage
+
 \section{misc}
 
 \subsection{$\bZ_4$ 1-form symmetry}
