--- a/ref.bib
+++ b/ref.bib
@@ -187,3 +187,19 @@ Switzerland},
     pages = "107--311",
     year = "2019"
 }
+
+
+
+@article{Wang:2018qoy,
+    author = "Wang, Juven and Wen, Xiao-Gang and Witten, Edward",
+    title = "{A New SU(2) Anomaly}",
+    eprint = "1810.00844",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1063/1.5082852",
+    journal = "J. Math. Phys.",
+    volume = "60",
+    number = "5",
+    pages = "052301",
+    year = "2019"
+}
