't Hooft-Polyakov monopole argument v2

--- a/memo.tex
+++ b/memo.tex
@@ -585,40 +585,42 @@ In the presence of (additional) fermions, this monopole might acquire non-trivia
 spacetime-Lorentz or flavor symmetries, depending on the representation of the fermions under $SU(2)$ gauge symmetry:
 \begin{equation*}
 	\begin{tabular}{c||cccc}
-		fermion gauge rep. & number of zero-modes & spin of zero-modes& spin of monopole & flavor rep.\\
+		fermion gauge rep. & number of zero-modes & spin of zero-modes& spin of monopole\\
 		\hline
-		$\bm{2}$ & $1$ & $0$ & $0$ & spinor\\
-		$\bm{3}$ & $2$ & $\tfrac{1}{2}$ & \\
+		$\bm{2}$ & $1$ & $0$ & $0$\\
+		$\bm{3}$ & $2$ & $\tfrac{1}{2}$\\
 		$\bm{4}$ & $4$ & $0\oplus 1$ & $\tfrac{1}{2}$\\
 	\end{tabular}
 \end{equation*}
 The numbers of zero-modes can be computed from the Callias index theorem\cite{Callias:1977kg}.
 
 According to \cite{Wang:2018qoy},
-there is a $w_2(TM_4)\beta w_2(SU(2)_{\text{gauge}})$ anomaly for a fermion in $\bm{4}$ charged under
+there is $w_2(TM_4)\beta w_2(SU(2)_{\text{gauge}})$ anomaly for a fermion in $\bm{4}$ charged under
 \begin{equation*}
 	\dfrac{Spin(4)_{\text{spacetime}} \times SU(2)_{\text{gauge}}}{\bZ_2},
 \end{equation*}
 which incarnates in the IR as an ill-definition of the effective interaction $w_2(TM) c_1(U(1)_{\text{gauge}})$,
 emerging after integrating out the fermion which obtained mass through Yukawa coupling.
-This effective interaction term should arise in order to make the monopole a fermion,
+This effective interaction term should arise in order to make the monopole a fermion
+(\textit{i.e.}\,spinor representation of $Spin(4)_{\text{spacetime}}$),
 but is not well-defined without a trivialization of $w_2(TM_4)$ or equivalently a spin structure.
 
 This situation looks quite similar to our problem where the fermions are charged under
 \begin{equation*}
 	\dfrac{SO(4)_{\text{gauge}} \times SU(2)_{\text{flavor}}}{\bZ_2}.
 \end{equation*}
-Therefore, by breaking $SU(2)_{\text{flavor}}$ to $U(1)_{\text{flavor}}$
-and examining the charge of the corresponding monopole under the remaining gauge group,
-one might be able to find out that there is a similar problem,
-which implies the existence of $w_2\beta w_2$ anomaly in the first place as desired.
+Since fermions are in the fundamental representation of the flavor symmetry,
+breaking $SU(2)_{\text{flavor}}$ to $U(1)_{\text{flavor}}$ gives rise to
+a monopole in the spinor representation this time of the $SO(4)_{\text{gauge}}$\cite{Harvey:1996ur}.
+Therefore by the same logic, one can deduce that there should be
+$w_2(SO(4)_{\text{gauge}})\beta w_2(SU(2)_{\text{flavor}})$ anomaly in the first place, as desired.
 
 Also, one should be able to generalize this whole argument to the case of fermions charged under
 \begin{equation*}
 	\dfrac{SO(2n_c)_{\text{gauge}} \times SU(2n_f)_{\text{flavor}}}{\bZ_2}
 \end{equation*}
 by breaking $SU(2n_f)_{\text{flavor}}$ to $SO(2n_f)_{\text{flavor}}$,
-since there are monopoles characterized by
+where we have monopoles characterized by
 \begin{equation*}
 	\pi_2\left(
 		\dfrac{SU(2n_f)}{SO(2n_f)}
