--- a/ref.bib
+++ b/ref.bib
@@ -203,3 +203,22 @@ Switzerland},
     pages = "052301",
     year = "2019"
 }
+
+
+
+@article {Serre1953,
+    AUTHOR = {Serre, Jean-Pierre},
+     TITLE = {Cohomologie modulo {$2$} des complexes
+              d'{E}ilenberg-{M}ac{L}ane},
+   JOURNAL = {Comment. Math. Helv.},
+  FJOURNAL = {Commentarii Mathematici Helvetici},
+    VOLUME = {27},
+      YEAR = {1953},
+     PAGES = {198--232},
+      ISSN = {0010-2571},
+   MRCLASS = {56.0X},
+  MRNUMBER = {60234},
+MRREVIEWER = {W. S. Massey},
+       DOI = {10.1007/BF02564562},
+       URL = {https://doi.org/10.1007/BF02564562},
+}
