explicit bordism invariants

--- a/memo.tex
+++ b/memo.tex
@@ -668,6 +668,12 @@ According to \cite[Appendix C.3]{Clement2002} and \cite[Eq.\,(6.3)]{Wan:2018bns}
 	\end{array}
 \end{equation}
 
+The corresponding invariant in 4d is simply \begin{equation}
+\exp(2\pi i \frac{p}{4} \int \frac12\mathfrak{P}(a) )
+\end{equation}
+where $\mathfrak{P}:H^2(-,\bZ_4)\to H^4(-,\bZ_8)$ is the Pontryagin square,
+which is even mod 8 on a spin manifold.
+
 \subsection{$\bZ_2\times \bZ_2$ 1-form symmetry}
 Exploiting the fact that $K(\bZ_2\times \bZ_2, 2) = K(\bZ_2, 2) \times K(\bZ_2, 2)$,
 it seems that we have
@@ -706,6 +712,10 @@ while the $\bZ_2$ (co)homology is known \cite{Serre1953} to be
 	=
 	\bZ_2[x_2, Sq^1 x_2, Sq^2Sq^1 x_2, \cdots].
 \end{equation*}
+
+The corresponding bordism invariants in 4d are $\mathfrak{P}(a)/2$, $ab$, $\mathfrak{P}(b)/2$, 
+and the one in 5d is $a\beta b$.
+
 
 \newpage
 
