--- a/ref.bib
+++ b/ref.bib
@@ -221,4 +221,18 @@ Switzerland},
 MRREVIEWER = {W. S. Massey},
        DOI = {10.1007/BF02564562},
        URL = {https://doi.org/10.1007/BF02564562},
+}@article{Gauntlett:1996cw,
+    author = "Gauntlett, Jerome P. and Lowe, David A.",
+    title = "{Dyons and S Duality in ${\mathcal{N}}\!=4$ Supersymmetric Gauge Theory}",
+    eprint = "hep-th/9601085",
+    archivePrefix = "arXiv",
+    reportNumber = "CALT-68-2035, UCSBTH-95-36",
+    doi = "10.1016/0550-3213(96)00218-0",
+    journal = "Nucl. Phys. B",
+    volume = "472",
+    pages = "194--206",
+    year = "1996"
 }
+
+
+
