--- a/ref.bib
+++ b/ref.bib
@@ -236,3 +236,21 @@ MRREVIEWER = {W. S. Massey},
 
 
 
+@article {KonoMimura1974,
+    AUTHOR = {Kono, Akira and Mimura, Mamoru},
+     TITLE = {On the cohomology of the classifying spaces of {${\rm
+              PSU}(4n+2)$} and {${\rm PO}(4n+2)$}},
+   JOURNAL = {Publ. Res. Inst. Math. Sci.},
+  FJOURNAL = {Kyoto University. Research Institute for Mathematical
+              Sciences. Publications},
+    VOLUME = {10},
+      YEAR = {1974/75},
+    NUMBER = {3},
+     PAGES = {691--720},
+      ISSN = {0034-5318},
+   MRCLASS = {57F35 (55F40)},
+  MRNUMBER = {0372899},
+MRREVIEWER = {J. F. Adams},
+       DOI = {10.2977/prims/1195191887},
+       URL = {https://doi.org/10.2977/prims/1195191887},
+}
