--- a/ref.bib
+++ b/ref.bib
@@ -253,4 +253,16 @@ MRREVIEWER = {W. S. Massey},
 MRREVIEWER = {J. F. Adams},
        DOI = {10.2977/prims/1195191887},
        URL = {https://doi.org/10.2977/prims/1195191887},
+}@article{Weinberg:1979zt,
+    author = "Weinberg, Erick J.",
+    title = "{Fundamental Monopoles and Multi-Monopole Solutions for Arbitrary Simple Gauge Groups}",
+    reportNumber = "CERN-TH-2779",
+    doi = "10.1016/0550-3213(80)90245-X",
+    journal = "Nucl. Phys. B",
+    volume = "167",
+    pages = "500--524",
+    year = "1980"
 }
+
+
+
