corrected wrong AHSS

--- a/memo.tex
+++ b/memo.tex
@@ -737,13 +737,13 @@ we have
 			3  &  && \cellcolor{lightyellow} &&&\\
 			2  &&  && \cellcolor{lightyellow} &&\\
 			1  &  &&  && \cellcolor{lightyellow} &&\\
-			0 & \bZ &  && \bZ_4 & \bZ & \cellcolor{lightyellow} & \bZ_2^{\oplus 2}\\
+			0 & \bZ &  && \bZ_4 & \bZ & \cellcolor{lightyellow} & \bZ_2\\
 			\hline
 			& 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
 		\end{array}
 		& \longrightarrow & 
 		\begin{array}{c|c}
-			6  & \bZ\oplus \bZ_2^{\oplus 2}\\
+			6  & \bZ\oplus \bZ_2\\
 			5  & \cellcolor{lightyellow}\\
 			4  & \bZ^{\oplus 2}\\
 			3  & \bZ_4\\
@@ -769,7 +769,7 @@ one can fill in the $E^2$-page of the AHSS:
 			3  &  && \cellcolor{lightyellow} &&&\\
 			2  & \bZ_2 &  & \red{\dbox{\black{$\bZ_2$}}} & \Blue{\dbox{\black{$\bZ_2$}}}\cellcolor{lightyellow} & \ast & \ast & \ast\\
 			1  & \bZ_2 && \red{\fbox{\black{$\bZ_2$}}} & \Blue{\fbox{\black{$\bZ_2$}}} & \green{\fbox{\black{\red{\dbox{\black{$\bZ_2^{\oplus 2}$}}}}}}\cellcolor{lightyellow} & \Blue{\dbox{\black{$\ast$}}} & \ast\\
-			0 & \bZ &  & \bZ_4 &  & \red{\fbox{\black{$\bZ^{\oplus 2}$}}} & \Blue{\fbox{\black{$\bZ_2^{\oplus 2}$}}}\cellcolor{lightyellow} & \green{\fbox{\black{$\ast$}}}\\
+			0 & \bZ &  & \bZ_4 &  & \red{\fbox{\black{$\bZ^{\oplus 2}$}}} & \Blue{\fbox{\black{$\bZ_2$}}}\cellcolor{lightyellow} & \green{\fbox{\black{$\ast$}}}\\
 			\hline
 			& 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
 		\end{array}
@@ -808,7 +808,7 @@ the would-be-$E_3$-page is given by
 		3  &  && \cellcolor{lightyellow} &&&& \hphantom{\bZ_2}\\
 		2  & \bZ_2 &&& \cellcolor{lightyellow} & \ast & \ast & \ast\\
 		1  & \bZ_2 &&&& \cellcolor{lightyellow} & \ast & \ast\\
-		0 & \bZ &  & \bZ_4 &  & \bZ^{\oplus 2} & \bZ_2\cellcolor{lightyellow} & \ast\\
+		0 & \bZ &  & \bZ_4 &  & \bZ^{\oplus 2} & \cellcolor{lightyellow} & \ast\\
 		\hline
 		& 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
 	\end{array}
